[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presto-pr"
version = "1.0.0"
description = "GitHub PR Comment Workflow Tool - Systematic approach to handling PR review comments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Presto Contributors"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
keywords = ["github", "pr", "review", "comments", "workflow", "cli", "git"]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/presto"
Documentation = "https://github.com/your-username/presto#readme"
Repository = "https://github.com/your-username/presto"
"Bug Reports" = "https://github.com/your-username/presto/issues"

[project.scripts]
presto = "app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
py-modules = ["app"] 